--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>svastiya-wealth-journey</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="svastiya-wealth-journey" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Svastiya Financial Advisors LLP</title>
+    <meta name="description" content="Expert investment advisory services rooted in deep market knowledge. Let us help you cultivate long-term financial prosperity with sustainable, growth-focused strategies." />
+    <meta name="author" content="Traverse TEC Labs" />
+ 
+    <meta property="og:title" content="Svastiya Financial Advisors LLP" />
+    <meta property="og:description" content="Expert investment advisory services rooted in deep market knowledge. Let us help you cultivate long-term financial prosperity with sustainable, growth-focused strategies." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:image" content="" />
+ 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="" />
   </head>
-
+ 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
