--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/images/Svastiya_tree.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Svastiya Financial Advisors LLP</title>
     <meta name="description" content="Expert investment advisory services rooted in deep market knowledge. Let us help you cultivate long-term financial prosperity with sustainable, growth-focused strategies." />
